[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycramfs"
description = "Read and extract cramfs images."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cramfs", "filesystem"]
authors = [
    {name = "AT0myks", email = "at0myks.dev@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/AT0myks/pycramfs/issues"
Source = "https://github.com/AT0myks/pycramfs"

[project.scripts]
pycramfs = "pycramfs.__main__:main"

[tool.setuptools]
packages = ["pycramfs"]
package-data = {pycramfs = ["py.typed"]}

[tool.setuptools.dynamic]
version = {attr = "pycramfs.__version__"}